# diff-solver

./: .gitignore  CMakeLists.txt  cuda.cpp  cuda.ixx  imgui.ini  main.cpp  plugin.ixx  solver.ixx
.github/workflows/: arch-build.yml  windows-build.yml
cloth/: data.ixx  kernels.cu  kernels.cuh  main.cpp  model.cpp  model.ixx  operators.cpp  operators.ixx  runtime.cpp  runtime.ixx
examples/cloth/: visualization.cu  visualization.h
examples/cloth/forward/: main.cpp  project.cpp  project.cu  project.h  simulation.cpp  simulation.cu  simulation.h  simulation.ixx
examples/cloth/stretch_stiffness_inverse/: main.cpp  project.cpp  project.cu  project.h  task.cpp  task.cu  task.h  task.ixx
examples/cloth/wind_trajectory_optimization/: main.cpp  project.cpp  project.cu  project.h  task.cpp  task.cu  task.h  task.ixx
examples/smoke/forward/: main.cpp  project.cpp  simulation.cpp  simulation.cu  simulation.h  simulation.ixx
examples/smoke/wind_trajectory_optimization/: main.cpp  project.cpp  project.cu  project.h  task.cpp  task.cu  task.h  task.ixx
smoke/: data.ixx  kernels.cuh  main.cpp  model.cpp  model.ixx  operators.cpp
solvers/cloth/: data.ixx  model.cpp  model.ixx  operators.cpp  operators.cu  operators.h
solvers/smoke/: kernels.cu  model.cpp  model.ixx  operators.cpp  operators.cu  operators.h  operators.ixx
spring_chain/: data.cpp  data.ixx  model.cpp  model.ixx  operators.cpp  operators.ixx
